# flashy-attention

./: .gitignore  README.md  pyproject.toml
.clinerules/: conversion.md
Tests/: test_attention.py
mlx_flash_attention/: __init__.py  attention.py  flash_attention.py  flashy_optimizations.py
mlx_flash_attention.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
